welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: not found: value T
      if (T(i)>a) {
          ^maxValue:5: error: not found: value T
        a = T(i)
            ^